tests/urmoac/errors/net_issues/duplicate_edge_id/d2r_output.urmoac
2000;10000;450.0;10.0;-200.0;0.0;-200.0;-10.0
2001;10000;350.0;10.0;-100.0;0.0;-100.0;10.0
2002;10000;250.0;0.0;0.0;0.0;0.0;0.0
2003;10000;150.0;10.0;100.0;0.0;100.0;-10.0
2004;10000;50.0;10.0;200.0;0.0;200.0;10.0
